fix: a working Dockerfile

--- a/Pipfile
+++ b/Pipfile
@@ -1,6 +1,7 @@
 [[source]]
 url = "https://pypi.python.org/simple"
 verify_ssl = true
+name = "pypi"
 
 [packages]
 gunicorn = "*"
@@ -9,7 +10,7 @@ brotlipy = "*"
 gevent = "*"
 Flask = "*"
 meinheld = "*"
-werkzeug = ">=0.14.1"
+werkzeug = ">=2.0.0"
 six = "*"
 flasgger = "*"
 pyyaml = {git = "https://github.com/yaml/pyyaml.git"}
